avoid cursor move on insert of line at EOF on save

BUG: 453252